# llm-clients

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llm_clients/: __init__.py
src/llm_clients/clients/: __init__.py  base.py  ollama.py  openrouter.py
src/llm_clients/exceptions/: __init__.py  base.py
src/llm_clients/retry/: __init__.py  backoff.py  config.py
tests/: __init__.py  test_clients.py  test_exceptions.py  test_retry.py
