[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-clients"
version = "0.1.0"
description = "Resilient LLM clients with retry logic, multiple providers, and unified interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Leonid Butyrev", email = "L.Butyrev@gmx.de" },
]
keywords = [
    "llm",
    "ai",
    "openrouter",
    "ollama",
    "retry",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/butyr/llm-clients"
Repository = "https://github.com/butyr/llm-clients"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_clients"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
